--- a/exam1_preparation/task1.ipynb
+++ b/exam1_preparation/task1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Относителната плътност на въздуха $ \\rho $ е измерена на различна височина с висока точност. Реззултатите от измерванията са систематизирани в таблица.\n",
+    "The relative air density $ \\rho $ has been measured at different heights with high accuracy. The results of the measurements are shown in a table.\n",
     "\n",
     "| h, km | $ \\rho $ |\n",
     "| :-: | :-: |\n",
@@ -14,9 +14,9 @@
     "| 4.575 | 0.6292 |\n",
     "| 6.1 | 0.5328 |\n",
     "\n",
-    "Определете приблизително каква е относителната плътност на височина 3 км.\n",
+    "Determine approximately what the relative density is at a height of 3 km.\n",
     "\n",
-    "Илюстрирайте графично как $ \\rho $ се изменя в зависимост от височината, като построите графиката на полинома и точките в една координатна система."
+    "Illustrate graphically how $ \\rho $ changes in relation to the height."
    ]
   },
   {
