--- a/exam1_preparation/task2.ipynb
+++ b/exam1_preparation/task2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Като използвате метода на неоределените коефициенти, намерете полином, удовлетворяващ интерполационните условия:\n",
+    "Using the method of undetermined coefficients, find a polynomial satisfying the interpolation conditions:\n",
     "\n",
     "$$\n",
     "\\psi(0) = 1,\\space \\psi'(0) = 0,\\space \\psi(1) = 2,\\space \\psi'(1) = 6,\\space \\psi(2) = 21.\n",
