--- a/exam1_preparation/task3.ipynb
+++ b/exam1_preparation/task3.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Да се приближи функцията $ f(x) = cos(x) $:\n",
-    "* като се построи интерполационен полином на Лагранж с възли $ 0, \\space \\pi/4, \\space \\pi/3 $\n",
-    "* като се построи интерполационен полином на Ермит с възли 0 и $ \\pi/3 $ и съответни кратности 2 и 1\n",
+    "Approximate the function $ f(x) = cos(x) $:\n",
+    "* by constructing the Lagrange interpolation polynoimial with nodes $ 0, \\space \\pi/4, \\space \\pi/3 $;\n",
+    "* by constructing the Hermite interpolation polynoimial with nodes $0, 0$ and $ \\pi/3 $.\n",
     "\n",
-    "Да се построят графиките на относителната грешка (по абсолютна стойност) в интервала $ [0, \\pi/3] $."
+    "Construct the graphs of the *relative* error (by absolute value) in the interval $ [0, \\pi/3] $."
    ]
   },
   {
