--- a/exam1_preparation/task4.ipynb
+++ b/exam1_preparation/task4.ipynb
@@ -4,15 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Дадена е функцията $ f(x) = \\dfrac{1}{2 + x} $. Построен е интерполационен полином на Лагранж $\\ L_3(f; x) $.\n",
+    "Let $ f(x) = \\dfrac{1}{2 + x} $.\n",
     "\n",
-    "Намерете оценка на грещката $\\ R(x) = |f(x) - L_3(f;x)| $ в интервала $ [-1, 1] $, като използвате Теорема за оценка на грешката и построете графиката и.\n",
+    "Construct the Lagrange interpolaiton polynomial of $3^{rd}$ degree $\\ L_3(f; x) $.\n",
     "\n",
-    "Възлите на интерполация са:\n",
+    "Evaluate the error $\\ R(x) = |f(x) - L_3(f;x)| $ in the interval $ [-1, 1] $.\n",
+    "\n",
+    "The interpolaiton nodes are:\n",
     "* $ x_0 = -1;\\space x_1 = -0,3;\\space x_2 = 0.3;\\space x_3 = 1 $\n",
-    "* Чебишовите възли в интервала $ [-1, 1] $\n",
+    "* the Tschebyscheff nodes in the interval $ [-1, 1] $\n",
     "\n",
-    "В кой случай оценката на грешката е по-добра? Защо?"
+    "In which case the error evaluation is better? Why?"
    ]
   },
   {
