--- a/exam1_preparation/task5.ipynb
+++ b/exam1_preparation/task5.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Да се построи интерполационен полином на функцията $\\ f(x) = sin^3(x^2) $ с възли $\\ π/6 $ и $\\ π/5 $ със съответни кратности 2 и 3.\n",
-    "\n",
-    "Да се изчертаят графиките на функцията и графиката на намерения полином в една координатна система."
+    "Construct an interpolaiton polynomial for the function $\\ f(x) = sin^3(x^2) $ with $\\ π/6 $ and $\\ π/5 $ with respective multiplicities 2 and 3."
    ]
   },
   {
