--- a/exam1_preparation/task6.ipynb
+++ b/exam1_preparation/task6.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Да се дефинира функция lagrange_poly(n, x0, h, f, x), която построява интерполационния полином на Лагранж от степен *n* за функцията $\\ f(x) $ с възли {$\\ x_i = x_0 + ih $,   $\\ i = 0, 1, ..., n $ }, като използва формулата на Лагранж."
+    "Define the function *lagrange_poly*(n, x0, h, f, x), which constructs the Lagrange interpolation polyomial of $n^{th}$ degree for the function $\\ f(x) $ with {$\\ x_i = x_0 + ih $,   $\\ i = 0, 1, ..., n $ }, using the Lagrange formula."
    ]
   },
   {
