--- a/exam1_preparation/task7.ipynb
+++ b/exam1_preparation/task7.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Данните са стойности на 5 точки за периодична функция с период `T = 2π`.\n",
+    "The data includes the values of 5 points for a periodic function with a period of $T = 2\\pi$.\n",
     "\n",
-    "Намерете обобщен полином по подходящ базис, който приближава дадената функция.\n",
+    "Find a generalized polynomial of an adequate basis that approximates the given function.\n",
     "\n",
-    "Илюстрирайте графично.\n",
+    "Illustrate graphically.\n",
     "\n",
     "|  x   |  y   |\n",
     "| :--: | :--: |\n",
