--- a/exam1_preparation/task8.ipynb
+++ b/exam1_preparation/task8.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Дадени са данни за усвояването на лекарство от организма.\n",
+    "The given data describes the absorption of a medicine by the human body.\n",
     "\n",
-    "В таблицата е дадена концентрацията на лекарството в кръвта като функция на времето.\n",
+    "The table shows the concentration of the medicine in the blood as a function of time.\n",
     "\n",
-    "Да се намери обощен полином по подходящ базис, който описва процеса.\n",
+    "Find a generalized polynomial of an adequate basis that describes the process.\n",
     "\n",
-    "|време, час|концентрация, %|\n",
-    "|:--------:|:-------------:|\n",
-    "| 0        | 0.1           |\n",
-    "| 2        | 0.009         |\n",
-    "| 4        | 0.0011        |\n",
-    "| 6        | 0.00003       |"
+    "|Time|Concentration|\n",
+    "|:--:|:-----------:|\n",
+    "| 0  | 0.1         |\n",
+    "| 2  | 0.009       |\n",
+    "| 4  | 0.0011      |\n",
+    "| 6  | 0.00003     |"
    ]
   },
   {
