replaced def function with a lambda

--- a/exam1_preparation/task3.ipynb
+++ b/exam1_preparation/task3.ipynb
@@ -40,8 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x):\n",
-    "    return np.cos(x)"
+    "f = lambda x: np.cos(x)"
    ]
   },
   {
