--- a/exam1_preparation/task4.ipynb
+++ b/exam1_preparation/task4.ipynb
@@ -47,8 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x):\n",
-    "    return 1 / (2 + x)"
+    "f = lambda x: 1 / (2 + x)"
    ]
   },
   {
