--- a/exam1_preparation/task6.ipynb
+++ b/exam1_preparation/task6.ipynb
@@ -45,8 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x):\n",
-    "    return np.cos(x)"
+    "f = lambda x: np.cos(x)"
    ]
   },
   {
