changed statement styling

--- a/exam1_preparation/task6.ipynb
+++ b/exam1_preparation/task6.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define the function *lagrange_poly*(n, x0, h, f, x), which constructs the Lagrange interpolation polyomial of $n^{th}$ degree for the function $\\ f(x) $ with {$\\ x_i = x_0 + ih $,   $\\ i = 0, 1, ..., n $ }, using the Lagrange formula."
+    "Define the function *lagrange_poly*(n, x0, h, f, x), which constructs the Lagrange interpolation polyomial of $n^{th}$ degree for the function $\\ f(x) $ with the following nodes:\n",
+    "\n",
+    "{$\\ x_i = x_0 + ih $,   $\\ i = 0, 1, ..., n $},\n",
+    "\n",
+    "using the Lagrange formula."
    ]
   },
   {
