added analitic differentiation

--- a/exam1_preparation/task5.ipynb
+++ b/exam1_preparation/task5.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct an interpolaiton polynomial for the function $\\ f(x) = sin^3(x^2) $ with $\\ π/6 $ and $\\ π/5 $ with respective multiplicities 2 and 3."
+    "Construct an interpolaiton polynomial for the function $ f(x) = \\sin^3(x^2) $ with $\\ π/6 $ and $\\ π/5 $ with respective multiplicities 2 and 3."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "metadata": {}
    },
@@ -34,8 +34,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> $ f(x) = \\sin^3(x^2) $\n",
+    "\n",
+    "$ f'(x) = 3\\sin^2(x^2) \\, (\\sin(x^2))' $\n",
+    "\n",
+    "$ f'(x) = 3\\sin^2(x^2) \\, (\\cos(x^2)\\, 2x) $\n",
+    "\n",
+    "> $ f'(x) = 6x\\sin^2(x^2)\\cos(x^2) $\n",
+    "\n",
+    "$ f''(x) = 6[\\sin^2(x^2)\\cos(x^2) + x(\\sin^2(x^2)\\cos(x^2))'] $\n",
+    "\n",
+    "$ f''(x) = 6\\{\\sin^2(x^2)\\cos(x^2) + x[2\\sin(x^2) (\\sin(x^2))' \\cos(x^2) - \\sin^2(x^2)\\sin(x^2)\\,2x]\\} $\n",
+    "\n",
+    "$ f''(x) = 6\\{\\sin^2(x^2)\\cos(x^2) + x[2\\sin(x^2) \\cos(x^2)\\,2x\\,\\cos(x^2) - \\sin^2(x^2)\\sin(x^2)\\,2x]\\} $\n",
+    "\n",
+    "$ f''(x) = 6\\{\\sin^2(x^2)\\cos(x^2) + x[4x\\,\\sin(x^2) \\cos^2(x^2) - 2x\\sin^2(x^2)\\sin(x^2)]\\} $\n",
+    "\n",
+    "$ f''(x) = 6\\{\\sin^2(x^2)\\cos(x^2) + 2x\\sin(x^2)[2x\\, \\cos^2(x^2) - x\\sin^2(x^2)]\\} $\n",
+    "\n",
+    "$ f''(x) = 6\\sin(x^2)\\{\\sin(x^2)\\cos(x^2) + 2x[2x\\, \\cos^2(x^2) - x\\sin^2(x^2)]\\} $\n",
+    "\n",
+    "> $ f''(x) = 6\\sin(x^2)\\{\\sin(x^2)\\cos(x^2) + 4x^2\\cos^2(x^2) - 2x^2\\sin^2(x^2)\\} $"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "metadata": {}
    },
@@ -53,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "metadata": {}
    },
