--- a/additional/interpolation_danger.ipynb
+++ b/additional/interpolation_danger.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we will take a look a why interpolating with a polynomial of an inadequate degree may lead to undesired results."
+    "Here we will take a look at why interpolating with a polynomial of an inadequate degree may lead to undesired results."
    ]
   },
   {
