replaced def function with a lambda

--- a/additional/interpolation_danger.ipynb
+++ b/additional/interpolation_danger.ipynb
@@ -54,8 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x):\n",
-    "    return np.sin(2*x) + np.e ** np.cos(x)"
+    "f = lambda x: np.sin(2*x) + np.e ** np.cos(x)"
    ]
   },
   {
