--- a/week04/task2.ipynb
+++ b/week04/task2.ipynb
@@ -343,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cases, where x is otside the right interval"
+    "#### Cases, where x is outside the right interval"
    ]
   },
   {
