added math notation to graphics

--- a/week03/task5.ipynb
+++ b/week03/task5.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "plt.plot(x_axis, runge(x_axis), label='runge', linestyle='dashed', color='orange')\n",
     "plt.plot(x_axis, newton_poly(nodes, values, x_axis), label='deg_10', color='blue')\n",
-    "plt.legend(['Runge function', '10th degree interpolation poly with Tschebyscheff nodes'])\n",
+    "plt.legend(['Runge function', '$10^{th}$ degree interpolation poly with Tschebyscheff nodes'])\n",
     "plt.show()"
    ]
   },
@@ -107,7 +107,7 @@
    ],
    "source": [
     "plt.plot(x_axis, absolute_error(x_axis))\n",
-    "plt.legend(['Absolute error of 10th degree poly with Tschebyscheff nodes'])\n",
+    "plt.legend(['Absolute error of $10^{th}$ degree poly with Tschebyscheff nodes'])\n",
     "plt.show()"
    ]
   }
