--- a/homework1/taskA6.ipynb
+++ b/homework1/taskA6.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a is -0.162787641761994 and b is: 0.340015744995022\n"
+     "ename": "NameError",
+     "evalue": "name 'sol' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 10\u001b[0m\n\u001b[1;32m      3\u001b[0m equations \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      4\u001b[0m     Eq(diff(phi(A, B), A), \u001b[38;5;241m0\u001b[39m),\n\u001b[1;32m      5\u001b[0m     Eq(diff(phi(A, B), B), \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      6\u001b[0m ]\n\u001b[1;32m      8\u001b[0m solutions \u001b[38;5;241m=\u001b[39m solve(equations)\n\u001b[0;32m---> 10\u001b[0m A \u001b[38;5;241m=\u001b[39m \u001b[43msol\u001b[49m[A]\n\u001b[1;32m     11\u001b[0m B \u001b[38;5;241m=\u001b[39m sol[B]\n\u001b[1;32m     13\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m B\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sol' is not defined"
      ]
     }
    ],
@@ -142,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +193,7 @@
     "plt.scatter(nodes, values, color='green')\n",
     "plt.scatter([x_target], [value_of_x_target], color='purple')\n",
     "plt.plot(x_axis, y(a, b, x_axis), color='orange', linestyle='dashed')\n",
-    "plt.legend(['data', 'added data', 'y(x) = ((a + sqrt(x)) / (b*x))^2'])\n",
+    "plt.legend(['data', 'added data', '$y(x) = ((a + \\sqrt(x)) / (b*x))^2$'])\n",
     "plt.show()"
    ]
   }
@@ -210,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
