--- a/additional/interpolation_danger.ipynb
+++ b/additional/interpolation_danger.ipynb
@@ -299,7 +299,7 @@
     "\n",
     "plt.plot(x_axis, f(x_axis), linestyle='dashed')\n",
     "plt.plot(x_axis, lagrange_poly(np.linspace(start, end, degree + 1), f, x_axis))\n",
-    "plt.legend(['f(x)', f'Lagrange poly of {degree}th degree'])\n",
+    "plt.legend(['f(x)', f'Lagrange poly of {degree} degree'])\n",
     "plt.show()"
    ]
   },
